Disallow margin collapse at the top-level

--- a/src/bokeh/core/_templates/file.html
+++ b/src/bokeh/core/_templates/file.html
@@ -27,6 +27,7 @@ that accepts these same parameters.
     <style>
       html, body {
         box-sizing: border-box;
+        display: flow-root;
         height: 100%;
         margin: 0;
         padding: 0;
