Allow to strictly enforce CDS fields in tests

--- a/bokehjs/test/devtools/test.html
+++ b/bokehjs/test/devtools/test.html
@@ -43,6 +43,7 @@
     <script type="text/javascript">
       Bokeh.settings.dev = true
       Bokeh.settings.force_webgl = true
+      //Bokeh.settings.force_fields = true
     </script>
     <script type="text/javascript">
       const {require} = Bokeh
