--- a/src/bokeh/sphinxext/_templates/palette_group_detail.html
+++ b/src/bokeh/sphinxext/_templates/palette_group_detail.html
@@ -7,10 +7,10 @@
       {% for number in numbers %}
       <tr>
 
-        <td height='20px' width='30px'> {{ number }} </td>
+        <td style="height: 20px; width: 30px;"> {{ number }} </td>
 
         {% for color in palettes[number] %}
-        <td height="20px" width="20px" style="background-color: {{ color }};border: #444444 thin solid;"/>
+        <td style="height: 20px; width: 20px; background-color: {{ color }}; border: #444444 thin solid;"></td>
         {% endfor %}
 
       </tr>
